--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,99 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+:focus {
+    outline: 0;
+}
+
+.img100 {
+    max-width: 100%;
+}
+
+.wrapper {
+    background: #141922;
+    color: #fff;
+}
+
+header {
+    display: flex;
+    width: 100%;
+    height: 90px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #000;
+}
+.header-left {
+    width: 220px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+.header-right {
+    width: calc(100% - 100px);
+    height: 100%;
+    line-height: 90px;
+    text-align: center;
+}
+
+main {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap:wrap;
+    height: calc(100vh - 90px);
+    margin-top: 90px;
+    overflow: auto;
+    padding: 50px;
+}
+
+main > .card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 250px;
+    min-height: 370px;
+    position: relative;
+    text-align: center;
+    padding: 20px;
+    margin: 30px 20px;
+    background: #24272d;
+    word-wrap: break-word;
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+.card-top {
+    position: relative;
+    font-size: 0;
+}
+.card-top > .layover {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    font-size: 50px;
+    background: #00000050;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+main > .card:hover {
+    transform: scale(1.1);
+}
+main > .card:hover .layover {
+    opacity: 100%;
+}
+
+.card-middle {
+    margin-top: 10px;
+    padding: 0 10px;
+    width: 100%;
+}
+.card-bottom {
+    position: absolute;
+    bottom: 15px;
+}
