--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@
     max-width: 100%;
 }
 
+body {
+    font-family: 'Raleway', sans-serif;
+}
+
 .wrapper {
     background: #141922;
     color: #fff;
@@ -27,10 +31,11 @@ header {
     background: #000;
 }
 .header-left {
-    width: 220px;
-    height: 100%;
     display: flex;
     align-items: center;
+    width: 220px;
+    height: 100%;
+    padding: 10px;
 }
 .header-right {
     width: calc(100% - 100px);
@@ -79,7 +84,7 @@ main > .card {
     width: 100%;
     height: 100%;
     font-size: 50px;
-    background: #00000050;
+    background: #00000070;
     opacity: 0;
     transition: opacity 0.3s;
 }
@@ -98,4 +103,6 @@ main > .card:hover .layover {
 .card-bottom {
     position: absolute;
     bottom: 15px;
+    color: #686a6e;
+    text-transform: uppercase;
 }
